--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Blanco / Negro !</title>
 
-  <!-- Tipografías: Playfair Display para elegancia serif, Dancing Script para firma -->
+  <!-- Tipografías -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Playfair+Display:wght@300;400;600&display=swap" rel="stylesheet">
 
   <!-- Estilos generales -->
@@ -21,15 +21,15 @@
       <!-- Enlaces a las dos secciones -->
       <a class="btn btn-white" href="blanco.html" aria-label="Entrar a Blanco">Entrar a Blanco</a>
       <a class="btn btn-black" href="negro.html" aria-label="Entrar a Negro">Entrar a Negro</a>
+      <!-- NUEVO BOTÓN: Pre-save -->
+      <a class="btn btn-presave" href="https://share.amuse.io/track/luiz-blanco-negro" target="_blank" aria-label="Pre-save en Spotify">🎧 Pre-save</a>
     </div>
 
     <footer class="tiny">
-      <!-- Personaliza tu crédito o elimina -->
       <span>Diseño minimal — listo para GitHub Pages / Netlify</span>
     </footer>
   </main>
 
-  <!-- script.js se usa para pequeñas interacciones -->
   <script src="script.js"></script>
 </body>
 </html>
