--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="centered-card">
     <h1 class="title">Blanco / Negro !</h1>
-    <p class="subtitle">Un micrositio — cartas y sonidos — para un proyecto musical</p>
+    <p class="subtitle">BY: LUIZ</p>
 
     <div class="buttons">
       <!-- Enlaces a las dos secciones -->
@@ -26,7 +26,7 @@
     </div>
 
     <footer class="tiny">
-      <span>Diseño minimal — listo para GitHub Pages / Netlify</span>
+      <span>luizpuntomp3@gmail.com</span>
     </footer>
   </main>
 
