--- a/blanco.html
+++ b/blanco.html
@@ -29,12 +29,10 @@
 
     <!-- PLAYER: puedes sustituir el archivo por confesion.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <label class="file-label">Cargar audio (ej: confesion.mp3)</label>
       <input class="file-input" id="audio-file-blanco" type="file" accept="audio/*">
       <audio id="audio-blanco" controls preload="none">
         <!-- Ruta por defecto: puedes poner confesion.mp3 en la misma carpeta y se cargará -->
-        <source src="confesion.mp3" type="audio/mpeg">
-        Tu navegador no soporta audio.
+        <source src="AMOR.wav" type="audio/mpeg">
       </audio>
       <small class="tiny">Sugerencia: si subes un archivo desde aquí, se reproducirá localmente en tu navegador.</small>
     </div>
