--- a/negro.html
+++ b/negro.html
@@ -14,7 +14,7 @@
 
   <main class="centered-card">
     <h2 class="section-title">Negro</h2>
-    <p class="section-desc">Carta oscura — glitch y fragmentación</p>
+    <p class="section-desc">BY: LUIZ</p>
 
     <!-- Carta con fragmentos: envuelve fragmentos en spans para el efecto glitch/ tachado -->
     <article class="letter dark">
@@ -39,14 +39,12 @@
 
     <!-- PLAYER: puedes sustituir el archivo por culpa.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <label class="file-label">Cargar audio (ej: culpa.mp3)</label>
       <input class="file-input" id="audio-file-negro" type="file" accept="audio/*">
       <audio id="audio-negro" controls preload="none">
         <!-- Ruta por defecto: puedes poner culpa.mp3 en la misma carpeta y se cargará -->
-        <source src="culpa.mp3" type="audio/mpeg">
+        <source src="DESAMOR.wav" type="audio/mpeg">
         Tu navegador no soporta audio.
       </audio>
-      <small class="tiny">Sugerencia: si subes un archivo desde aquí, se reproducirá localmente en tu navegador.</small>
     </div>
 
   </main>
