--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <h1 class="title">Blanco / Negro !</h1>
     <p class="subtitle">BY: LUIZ</p>
 
+  <div class="intro">
+    <p class="intro-text">
+      Dos cartas, dos voces.<br>
+      Una luz que confiesa,<br>
+      una sombra que reclama.<br>
+      <strong>¿Te atreves a entrar?</strong>
+    </p>
+  </div>
+    
     <div class="buttons">
       <!-- Enlaces a las dos secciones -->
       <a class="btn btn-white" href="blanco.html" aria-label="Entrar a Blanco">Entrar a Blanco</a>
