--- a/blanco.html
+++ b/blanco.html
@@ -32,7 +32,7 @@
       <input class="file-input" id="audio-file-blanco" type="file" accept="audio/*">
       <audio id="audio-blanco" controls preload="none">
         <!-- Ruta por defecto: puedes poner confesion.mp3 en la misma carpeta y se cargará -->
-        <source src="AMOR.wav" type="audio/mpeg">
+        <source src="AMOR.wav">
       </audio>
       <small class="tiny">Sugerencia: si subes un archivo desde aquí, se reproducirá localmente en tu navegador.</small>
     </div>
