--- a/negro.html
+++ b/negro.html
@@ -42,7 +42,7 @@
       <input class="file-input" id="audio-file-negro" type="file" accept="audio/*">
       <audio id="audio-negro" controls preload="none">
         <!-- Ruta por defecto: puedes poner culpa.mp3 en la misma carpeta y se cargará -->
-        <source src="DESAMOR.wav" type="audio/mpeg">
+        <source src="DESAMOR.wav">
         Tu navegador no soporta audio.
       </audio>
     </div>
