--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
 
   <div class="intro">
     <p class="intro-text">
-      Dos cartas, dos voces.<br>
-      Una luz que confiesa,<br>
-      una sombra que reclama.<br>
+      Dos cartas, dos lados.<br>
+      Blanco y negro.<br>
       <strong>¿Te atreves a entrar?</strong>
     </p>
   </div>
