--- a/negro.html
+++ b/negro.html
@@ -32,7 +32,7 @@
         <span class="frag">Quería odiarte. Solo aprendí a extrañarte.</span>
       </p>
       <p>
-        <span class="frag strike">Qué culpa tengo yo… si mi único error fue quererte demasiado.</span>
+        <span class="frag strike"><strong>Qué culpa tengo yo?</strong> … si mi único error fue quererte demasiado.</span>
       </p>
       <p class="signature">— anónimo</p>
     </article>
