--- a/blanco.html
+++ b/blanco.html
@@ -22,7 +22,7 @@
       <span class="line">Hoy me descubrí buscándote en todo.</span>
       <span class="line">En las luces de la calle, en los mensajes que nunca llegan.</span>
       <span class="line">Dependo de tu voz, de tus gestos, de esa forma tuya de existir.</span>
-      <span class="line">Y si me pidieras la luna, te juro que saldría a buscar una escalera.</span>
+      <span class="line">Y <strong>si muero mañana</strong>, te prometo que será pensando en ti.</span>
       <span class="line signature">Tuyo, sin que lo sepas.</span>
     </article>
 
