--- a/blanco.html
+++ b/blanco.html
@@ -28,9 +28,8 @@
 
     <!-- PLAYER: puedes sustituir el archivo por confesion.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <audio id="audio-blanco">
-        <!-- Ruta por defecto: puedes poner confesion.mp3 en la misma carpeta y se cargará -->
-        <source src="AMOR.wav">
+      <audio controls>
+        <source src="AMOR.wav" type="audio/mpeg">
       </audio>
     </div>
 
