--- a/negro.html
+++ b/negro.html
@@ -39,10 +39,8 @@
 
     <!-- PLAYER: puedes sustituir el archivo por culpa.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <audio id="audio-negro" controls preload="none">
-        <!-- Ruta por defecto: puedes poner culpa.mp3 en la misma carpeta y se cargará -->
-        <source src="DESAMOR.wav">
-        Tu navegador no soporta audio.
+      <audio controls>
+        <source src="DESAMOR.wav" type="audio/mpeg">
       </audio>
     </div>
 
