--- a/blanco.html
+++ b/blanco.html
@@ -29,7 +29,7 @@
     <!-- PLAYER: puedes sustituir el archivo por confesion.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
       <audio controls>
-        <source src="AMOR.wav" type="audio/mpeg">
+        <source src="AMOR.wav" type="audio/wav">
       </audio>
     </div>
 
