--- a/negro.html
+++ b/negro.html
@@ -40,7 +40,7 @@
     <!-- PLAYER: puedes sustituir el archivo por culpa.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
       <audio controls>
-        <source src="DESAMOR.wav" type="audio/wav">
+        <source src="DESAMOR.mp3" type="audio/mpeg">
       </audio>
     </div>
 
