--- a/negro.html
+++ b/negro.html
@@ -39,9 +39,7 @@
 
     <!-- PLAYER: puedes sustituir el archivo por culpa.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <audio controls>
-        <source src="DESAMOR.mp3" type="audio/mpeg">
-      </audio>
+      <source src="AMOR.mp3" type="audio/mpeg">
     </div>
 
   </main>
