--- a/blanco.html
+++ b/blanco.html
@@ -28,8 +28,11 @@
 
     <!-- PLAYER: puedes sustituir el archivo por confesion.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <source src="AMOR.mp3" type="audio/mpeg">
-    </div>
+  <audio controls>
+    <source src="AMOR.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
+  </audio>
+</div>
 
   </main>
 
