--- a/negro.html
+++ b/negro.html
@@ -39,8 +39,11 @@
 
     <!-- PLAYER: puedes sustituir el archivo por culpa.mp3 en la carpeta o subir un mp3 desde el input -->
     <div class="audio-block">
-      <source src="AMOR.mp3" type="audio/mpeg">
-    </div>
+  <audio controls>
+    <source src="DESAMOR.mp3" type="audio/mpeg">
+    Tu navegador no soporta audio.
+  </audio>
+</div>
 
   </main>
 
