--- a/negro.html
+++ b/negro.html
@@ -41,6 +41,7 @@
     <div class="audio-block">
   <audio controls>
     <source src="DESAMOR.mp3" type="audio/mpeg">
+    <source src="DESAMOR.wav" type="audio/wav">
     Tu navegador no soporta audio.
   </audio>
 </div>
