--- a/blanco.html
+++ b/blanco.html
@@ -30,6 +30,7 @@
     <div class="audio-block">
   <audio controls>
     <source src="AMOR.mp3" type="audio/mpeg">
+    <source src="AMOR.wav" type="audio/wav">
     Tu navegador no soporta audio.
   </audio>
 </div>
