--- a/blanco.html
+++ b/blanco.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Blanco — Blanco / Negro !</title>
+  <link rel="icon" href="logo.jpg" type="image/x-icon">
 
   <!-- Misma tipografía para coherencia -->
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Playfair+Display:wght@300;400;600&display=swap" rel="stylesheet">
